# ewatercycle-swmm

./: .gitignore  README.md  demo_SWMM_model.ipynb  demo_containerized_model.ipynb  example.inp  pyproject.toml
.github/workflows/: publish.yml
docs/bellinge_example/: SWMM_Bellinge_example.ipynb
docs/berlinge_example/: SWMM_Bellinge_example.ipynb
src/ewatercycle_swmm/: model.py
tests/: test_metadata.py  test_model.py
