[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/ewatercycle_swmm/__init__.py"

[project]
name = "ewatercycle-swmm"
description = "Storm Water Management Model"
readme = "README.md"
license = "Apache-2.0"
authors = [
  { name = "Mark Melotto", email = "markmelotto@tudelft.nl" },
]
keywords = ["ewatercycle", "hydrology"]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
]

# Include here only the dependencies for the eWaterCycle wrapped model
dependencies = [
  "ewatercycle>=2.1.0",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
  "pytest",
]

# This registers the plugin such that it is discoverable by eWaterCycle
[project.entry-points."ewatercycle.models"]
SWMM = "ewatercycle_swmm.model:SWMM"
